<?xml version="1.0" encoding="utf-8"?><menu xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    >    <!-- "Mark Favorite", should appear as action button if possible-->    <item        android:id="@+id/action_share"        android:icon="@mipmap/ic_share"        android:title="@string/action_share"        app:showAsAction="never"/>    <item        android:id="@+id/action_rate"        android:title="@string/action_rate"        android:icon="@mipmap/ic_rate"        app:showAsAction="never"/>    <item        android:id="@+id/action_privacy"        android:title="@string/action_privacy"        android:icon="@mipmap/ic_privacy"        app:showAsAction="never"/>    <item        android:id="@+id/action_contact"        android:title="@string/action_contact"        android:icon="@mipmap/ic_contact"        app:showAsAction="never"/>    <!-- Settings, should always be in the overflow -->    <item android:id="@+id/action_settings"        android:title="@string/action_settings"        android:icon="@mipmap/ic_setting"        app:showAsAction="never"/></menu>